
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_throttler"
version = "0.0.3"
description = "A system for monitoring and limiting IPFS' effect on LAN performance."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Emendir" , email = "dev@emendir.tech"}]
license = "MIT-0 OR CC0-1.0"
license-files = ["LICENSE", "LICENSE-CC0"]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
